--- a/dev/assets/about.pug
+++ b/dev/assets/about.pug
@@ -31,7 +31,7 @@ block content
 				include _modules/about-slider-points.pug
 				include _modules/slide-about.pug
 				
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+	a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
