--- a/dev/assets/branding-and-design.pug
+++ b/dev/assets/branding-and-design.pug
@@ -15,12 +15,12 @@ block content
 
 
 	.sections-p-wrapper.project-bg-beams
-		+project-sections("Branding & Design", "High Beams", "01", "project-brand-beams")
+		+project-sections("Branding & Design", "High Beams", "01", "high-beams.html")
 
 	.sections-p-wrapper.project-bg-cred
-		+project-sections("Branding & Design", "Future Street Cred", "02", "project-brand-cred")
+		+project-sections("Branding & Design", "Future Street Cred", "02", "future-street-cred.html")
 
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+	a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
