--- a/dev/assets/campaign-and-social-media.pug
+++ b/dev/assets/campaign-and-social-media.pug
@@ -15,10 +15,10 @@ block content
 
 
 	.sections-p-wrapper.project-bg-suede
-		+project-sections("Campaign & Social Media Strategy ", "Suede Guerrillas ", "01", "project-social-suede")
+		+project-sections("Campaign & Social Media Strategy ", "Suede Guerrillas ", "01", "suede-guerrillas.html")
 	.sections-p-wrapper.project-bg-power
-		+project-sections("Campaign & Social Media Strategy ", "Power Horse", "02", "project-social-power")
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+		+project-sections("Campaign & Social Media Strategy ", "Power Horse", "02", "power-horse.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
