--- a/dev/assets/our-work.pug
+++ b/dev/assets/our-work.pug
@@ -30,11 +30,11 @@ block content
 			//- projects wrapper
 			.works-list.snj-col-10.offset-1.snj-col-md-9.offset-md-2
 				.wrap-list
-					+project-intro("workbranding","01", "Branding & Design", "","See case studies", "See case")
-					+project-intro("workstrategy", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 1, arrowDelay: 2} )
-					+project-intro("workmanagement","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 2, arrowDelay: 3})
-					+project-intro("workevent","04","Event Curation","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
-					+project-intro("workcommerce","05","E-commerce","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
+					+project-intro("branding-and-design.html","01", "Branding & Design", "","See case studies", "See case")
+					+project-intro("campaign-and-social-media.html", "02","Campaign"," & Social Media Strategy","See case studies", "See case", {textDelay: 1, arrowDelay: 2} )
+					+project-intro("content-creation-and-management.html","03","Content Creation"," & Management", "See case studies", "See case", {textDelay: 2, arrowDelay: 3})
+					+project-intro("event-curation.html","04","Event Curation","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
+					+project-intro("e-commerce.html","05","E-commerce","", "See case studies","See Case",{textDelay: 2, arrowDelay: 2})
 	
 
 	a.page_transitioner.navigation-btn.btn-pages(href="/")
