--- a/dev/assets/suede-guerrillas.pug
+++ b/dev/assets/suede-guerrillas.pug
@@ -55,7 +55,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-brand-cred")
+					a.page_transitioner.more-cases.prev-case(href="future-street-cred.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -64,15 +64,15 @@ block content
 					p Next Project
 					h3 Power Horse
 					h4 Campaign & Social Media Strategy
-					a.page_transitioner(href="project-social-power") See case
+					a.page_transitioner(href="power-horse.html") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-social-power")
+					a.page_transitioner.more-cases.next-case(href="power-horse.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.page_transitioner.navigation-btn.btn-pages(href="workstrategy")
+	a.page_transitioner.navigation-btn.btn-pages(href="campaign-and-social-media.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
