--- a/dev/assets/thanks.pug
+++ b/dev/assets/thanks.pug
@@ -25,7 +25,7 @@ block content
 					
 					a.social-link.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="5" data-cascade-delay="5" href="https://instagram.com/junglebeige" target="_blank" rel="nofollow noopener noreferrer")
 							+ins-icon
-			a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+			a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 				span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
