--- a/dev/assets/_modules/footer-nav.pug
+++ b/dev/assets/_modules/footer-nav.pug
@@ -13,5 +13,5 @@ mixin footer(scroll, activePage)
 				.activePage.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Contact us
 
 			else
-				a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="contact" color="brown")
+				a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="contact.html" color="brown")
 					span.line-link Contact us
