--- a/dev/assets/_modules/header-nav.pug
+++ b/dev/assets/_modules/header-nav.pug
@@ -5,5 +5,5 @@ header#header-nav.snj-container-fluid
 		include ../_modules/side-nav.pug
 		include ../_modules/nav-menu.pug
 
-		a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about")
+		a.link-pages.page_transitioner.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1" href="about.html")
 			span.line-link About us
