--- a/dev/assets/amongst-few-e-commerce.pug
+++ b/dev/assets/amongst-few-e-commerce.pug
@@ -54,7 +54,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-event-amongst")
+					a.page_transitioner.more-cases.prev-case(href="amongst-few-events.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -63,17 +63,17 @@ block content
 					p Next Project
 					h3 High Beams
 					h4 Branding & Design
-					a.page_transitioner(href="project-brand-beams") See case
+					a.page_transitioner(href="high-beams.html") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-brand-beams")
+					a.page_transitioner.more-cases.next-case(href="high-beams.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 
 
-	a.page_transitioner.navigation-btn.btn-pages(href="workcommerce")
+	a.page_transitioner.navigation-btn.btn-pages(href="e-commerce.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 
