--- a/dev/assets/amongst-few-events.pug
+++ b/dev/assets/amongst-few-events.pug
@@ -61,7 +61,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-event-puma")
+					a.page_transitioner.more-cases.prev-case(href="puma-events.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -70,15 +70,15 @@ block content
 					p Next Project
 					h3 amongst few
 					h4 E-commerce
-					a.page_transitioner(href="project-commerce-amongst") See case
+					a.page_transitioner(href="amongst-few-e-commerce.html") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-commerce-amongst")
+					a.page_transitioner.more-cases.next-case(href="amongst-few-e-commerce.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.page_transitioner.navigation-btn.btn-pages(href="workevent")
+	a.page_transitioner.navigation-btn.btn-pages(href="event-curation.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
