--- a/dev/assets/cartel-coffee.pug
+++ b/dev/assets/cartel-coffee.pug
@@ -52,7 +52,7 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container.container-prev
-					a.page_transitioner.more-cases.prev-case(href="project-manage-puma")
+					a.page_transitioner.more-cases.prev-case(href="puma-middle-east.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
@@ -61,15 +61,15 @@ block content
 					p Next Project
 					h3 PUMA
 					h4 Event Curation
-					a.page_transitioner(href="project-event-puma") See case
+					a.page_transitioner(href="puma-events.html") See case
 					p.copyright © Copyright 2020
 				.snj-col-md-1.offset-md-1.arrow-container.container-next
-					a.page_transitioner.more-cases.next-case(href="project-event-puma")
+					a.page_transitioner.more-cases.next-case(href="puma-events.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
-	a.page_transitioner.navigation-btn.btn-pages(href="workmanagement")
+	a.page_transitioner.navigation-btn.btn-pages(href="content-creation-and-management.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
