--- a/dev/assets/content-creation-and-management.pug
+++ b/dev/assets/content-creation-and-management.pug
@@ -15,10 +15,10 @@ block content
 
 			
 	.sections-p-wrapper.project-bg-puma
-		+project-sections(" Content Creation & Management", "PUMA", "01", "project-manage-puma")
+		+project-sections(" Content Creation & Management", "PUMA", "01", "puma-middle-east.html")
 	.sections-p-wrapper.project-bg-coffee
-		+project-sections(" Content Creation & Management", "Cartel Coffee", "02", "project-manage-coffee")
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+		+project-sections(" Content Creation & Management", "Cartel Coffee", "02", "cartel-coffee.html")
+	a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1")
 			+back-icon-btn
 block footer
