--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -21,7 +21,7 @@ block content
 				include _modules/inputs-form.pug
 
 
-	a.page_transitioner.navigation-btn.btn-pages(href="ourwork")
+	a.page_transitioner.navigation-btn.btn-pages(href="our-work.html")
 		span.animate-up.jb-cascade(data-cascade="fade-up" data-cascade-delay-mobile="1" data-cascade-delay="1") Our Work
 
 
